--- a/index.html
+++ b/index.html
@@ -45,5 +45,26 @@
     </div>
   </section>
 
+  <section id="contact" class="contact">
+  <div class="contact-container">
+    <h2>Contact Us</h2>
+    <p>Reach out to Urbivista for inquiries, investor briefings, or more information.</p>
+    
+    <ul class="contact-info">
+      <li>Email: <a href="mailto:luke@urbivista.io">info@urbivista.io</a></li>
+      <li>Phone: <a href="tel:+2193868562">+1 (234) 567-890</a></li>
+      <li>Address: 9191 BROADWAY, MERRILLVILLE, IN, 46410, USA </li>
+    </ul>
+
+    <p>Or fill out our inquiry form below:</p>
+    <form class="contact-form" action="mailto:luke@urbivista.io" method="post" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
+
 </body>
 </html>
