--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="#">Platform</a>
       <a href="#">Solutions</a>
-      <a href="#">Contact</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
