--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>Reach out to Urbivista for inquiries, investor briefings, or more information.</p>
     
     <ul class="contact-info">
-      <li>Email: <a href="mailto:luke@urbivista.io">info@urbivista.io</a></li>
+      <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
       <li>Phone: <a href="tel:+2193868562">+1 (219) 386-8562</a></li>
       <li>Address: 9191 BROADWAY, MERRILLVILLE, IN, 46410, USA </li>
     </ul>
