--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </ul>
 
     <p>Or fill out our inquiry form below:</p>
-    <form class="contact-form" action="mailto:luke@urbivista.io" method="post" enctype="text/plain">
+    <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
