--- a/index.html
+++ b/index.html
@@ -2,35 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Urbivista</title>
+  <title>Urbivista | Enterprise Site Selection SaaS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics. Data-driven site selection software for enterprise businesses.">
+  <meta name="keywords" content="site selection software, enterprise location analysis, SaaS site selection tool, location intelligence">
+  <meta name="author" content="Luke Seifert">
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:title" content="Urbivista | Enterprise Site Selection SaaS">
+  <meta property="og:description" content="Smarter site selection through data-driven insight for enterprises.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://urbivista.io">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Urbivista | Enterprise Site Selection SaaS">
+  <meta name="twitter:description" content="Smarter site selection through data-driven insight for enterprises.">
 </head>
 <body>
 
+  <!-- Navigation -->
   <header class="nav">
     <div class="logo">Urbivista</div>
     <nav>
-      <a href="#">Platform</a>
-      <a href="#">Solutions</a>
+      <a href="#hero">Platform</a>
+      <a href="#features">Solutions</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <main class="hero">
+  <!-- Hero Section -->
+  <main id="hero" class="hero">
     <h1>Smarter site selection through data-driven insight</h1>
-    <p>
-      Urbivista helps enterprises evaluate locations with clarity,
-      confidence, and defensible analytics.
-    </p>
-
+    <p>Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics.</p>
     <div class="buttons">
       <a class="primary" href="#">Request a Briefing</a>
       <a class="secondary" href="#">View Platform</a>
     </div>
   </main>
 
-  <section class="features">
+  <!-- Features Section -->
+  <section id="features" class="features">
+    <h2>Platform Features</h2>
     <div>
       <h3>Location Intelligence</h3>
       <p>Demographics, traffic, and competitive analysis in one platform.</p>
@@ -45,26 +59,27 @@
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="contact">
-  <div class="contact-container">
-    <h2>Contact Us</h2>
-    <p>Reach out to Urbivista for inquiries, investor briefings, or more information.</p>
-    
-    <ul class="contact-info">
-      <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
-      <li>Phone: <a href="tel:+2193868562">+1 (219) 386-8562</a></li>
-      <li>Address: 9191 BROADWAY, MERRILLVILLE, IN, 46410, USA </li>
-    </ul>
+    <div class="contact-container">
+      <h2>Contact Us</h2>
+      <p>Reach out to Urbivista for inquiries, investor briefings, or more information.</p>
+      <ul class="contact-info">
+        <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
+        <li>Phone: <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
+        <li>Address: 9191 Broadway, Merrillville, IN 46410, USA</li>
+      </ul>
 
-    <p>Or fill out our inquiry form below:</p>
-    <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
+      <p>Or fill out our inquiry form below:</p>
+      <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
 
 </body>
 </html>
+
