--- a/index.html
+++ b/index.html
@@ -2,75 +2,150 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Urbivista | Enterprise Site Selection SaaS</title>
+  <title>Urbivista | Enterprise Site Selection & Location Intelligence</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics. Data-driven site selection software for enterprise businesses.">
-  <meta name="keywords" content="site selection software, enterprise location analysis, SaaS site selection tool, location intelligence">
-  <meta name="author" content="Luke Seifert">
+  <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection and location intelligence. Make defensible, data-driven expansion decisions with confidence." />
+  <meta name="keywords" content="site selection software, location intelligence, enterprise SaaS, expansion analytics, trade area analysis" />
+  <meta name="author" content="Luke Seifert" />
+
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="Urbivista | Enterprise Site Selection SaaS">
-  <meta property="og:description" content="Smarter site selection through data-driven insight for enterprises.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://urbivista.io">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Urbivista | Enterprise Site Selection SaaS" />
+  <meta property="og:description" content="Smarter site selection through defensible, data-driven analytics." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://urbivista.io" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Urbivista | Enterprise Site Selection SaaS">
-  <meta name="twitter:description" content="Smarter site selection through data-driven insight for enterprises.">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Urbivista | Enterprise Site Selection SaaS" />
+  <meta name="twitter:description" content="Enterprise-grade site selection and location intelligence." />
 </head>
+
 <body>
 
   <!-- Navigation -->
   <header class="nav">
-    <div class="logo">Urbivista</div>
-    <nav>
-      <a href="#hero">Platform</a>
-      <a href="#features">Solutions</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="nav-container">
+      <div class="logo">Urbivista</div>
+      <nav>
+        <a href="#platform">Platform</a>
+        <a href="#solutions">Solutions</a>
+        <a href="blog.html">Blog</a>
+        <!-- Future -->
+        <!-- <a href="about.html">About Us</a> -->
+        <!-- <a href="projects.html">Recent Projects</a> -->
+        <a href="#contact" class="nav-cta">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Hero Section -->
-  <main id="hero" class="hero">
-    <h1>Smarter site selection through data-driven insight</h1>
-    <p>Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics.</p>
-    <div class="buttons">
-      <a class="primary" href="#">Request a Briefing</a>
-      <a class="secondary" href="#">View Platform</a>
+  <!-- Hero -->
+  <main class="hero">
+    <div class="hero-content">
+      <h1>Smarter site selection through data-driven insight</h1>
+      <p>
+        Urbivista helps enterprises evaluate locations with clarity,
+        confidence, and defensible analytics.
+      </p>
+      <div class="buttons">
+        <a href="#platform" class="primary">Explore the Platform</a>
+        <a href="#contact" class="secondary">Request a Briefing</a>
+      </div>
     </div>
   </main>
 
-  <!-- Features Section -->
-  <section id="features" class="features">
-    <h2>Platform Features</h2>
-    <div>
-      <h3>Location Intelligence</h3>
-      <p>Demographics, traffic, and competitive analysis in one platform.</p>
-    </div>
-    <div>
-      <h3>Scenario Modeling</h3>
-      <p>Compare sites and forecast outcomes before capital is deployed.</p>
-    </div>
-    <div>
-      <h3>Enterprise Focused</h3>
-      <p>Built for multi-location, multi-stakeholder decision making.</p>
+  <!-- Platform -->
+  <section id="platform" class="platform">
+    <div class="section-container">
+      <div class="text">
+        <h2>The Urbivista Platform</h2>
+        <p>
+          Urbivista centralizes location intelligence, scenario modeling,
+          and reporting into a single enterprise-grade system.
+        </p>
+        <ul>
+          <li>Data-backed site scoring</li>
+          <li>Custom trade area analysis</li>
+          <li>Executive-ready dashboards</li>
+          <li>Defensible decision documentation</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/platform-dashboard.png" alt="Urbivista site selection dashboard">
+      </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Solutions -->
+  <section id="solutions" class="solutions">
+    <div class="section-container">
+      <h2>Enterprise Solutions</h2>
+
+      <div class="solution">
+        <img src="images/location-intelligence.png" alt="Location intelligence analysis">
+        <div>
+          <h3>Location Intelligence</h3>
+          <p>
+            Demographics, traffic, workforce, and competitive data unified
+            into one decision layer.
+          </p>
+        </div>
+      </div>
+
+      <div class="solution">
+        <img src="images/scenario-modeling.png" alt="Scenario modeling">
+        <div>
+          <h3>Scenario Modeling</h3>
+          <p>
+            Compare sites, forecast performance, and understand risk
+            before capital is deployed.
+          </p>
+        </div>
+      </div>
+
+      <div class="solution">
+        <img src="images/enterprise-tools.png" alt="Enterprise expansion tools">
+        <div>
+          <h3>Enterprise Expansion</h3>
+          <p>
+            Built for multi-location growth, internal approvals,
+            and executive accountability.
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <div class="cta-content">
+      <h2>Make confident expansion decisions</h2>
+      <p>
+        See how Urbivista supports enterprise site selection with
+        defensible, data-driven insight.
+      </p>
+      <a href="#contact" class="primary">Request a Demo</a>
+    </div>
+  </section>
+
+  <!-- Contact -->
   <section id="contact" class="contact">
     <div class="contact-container">
-      <h2>Contact Us</h2>
-      <p>Reach out to Urbivista for inquiries, investor briefings, or more information.</p>
+      <h2>Contact Urbivista</h2>
+      <p>
+        Reach out for platform demos, investor briefings,
+        or partnership inquiries.
+      </p>
+
       <ul class="contact-info">
         <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
         <li>Phone: <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
-        <li>Address: 9191 Broadway, Merrillville, IN 46410, USA</li>
+        <li>Address: 9191 Broadway, Merrillville, IN 46410</li>
       </ul>
 
-      <p>Or fill out our inquiry form below:</p>
       <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
@@ -79,6 +154,11 @@
       </form>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Urbivista. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
