--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Urbivista | Enterprise Site Selection & Location Intelligence</title>
-
+  <title>Urbivista | Enterprise Site Selection SaaS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection and location intelligence. Make defensible, data-driven expansion decisions with confidence." />
-  <meta name="keywords" content="site selection software, location intelligence, enterprise SaaS, expansion analytics, trade area analysis" />
-  <meta name="author" content="Luke Seifert" />
+  <link rel="stylesheet" href="styles.css" />
 
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- Open Graph -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:title" content="Urbivista | Enterprise Site Selection SaaS" />
-  <meta property="og:description" content="Smarter site selection through defensible, data-driven analytics." />
+  <meta property="og:description" content="Smarter site selection through data-driven analytics." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://urbivista.io" />
-
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Urbivista | Enterprise Site Selection SaaS" />
   <meta name="twitter:description" content="Enterprise-grade site selection and location intelligence." />
 </head>
-
 <body>
 
   <!-- Navigation -->
@@ -30,41 +23,49 @@
     <div class="nav-container">
       <div class="logo">Urbivista</div>
       <nav>
-        <a href="#platform">Platform</a>
+        <a href="#features">Platform</a>
         <a href="#solutions">Solutions</a>
         <a href="blog.html">Blog</a>
-        <!-- Future -->
-        <!-- <a href="about.html">About Us</a> -->
-        <!-- <a href="projects.html">Recent Projects</a> -->
+        <!-- Future tabs -->
+        <!-- <a href="#about">About Us</a> -->
+        <!-- <a href="#projects">Recent Projects</a> -->
         <a href="#contact" class="nav-cta">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <main class="hero">
-    <div class="hero-content">
-      <h1>Smarter site selection through data-driven insight</h1>
-      <p>
-        Urbivista helps enterprises evaluate locations with clarity,
-        confidence, and defensible analytics.
-      </p>
-      <div class="buttons">
-        <a href="#platform" class="primary">Explore the Platform</a>
-        <a href="#contact" class="secondary">Request a Briefing</a>
-      </div>
+    <h1>Smarter site selection through data-driven insight</h1>
+    <p>Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics.</p>
+    <div class="buttons">
+      <a href="#features" class="primary">Explore the Platform</a>
+      <a href="#contact" class="secondary">Request a Briefing</a>
     </div>
   </main>
 
-  <!-- Platform -->
+  <!-- Original Features Section -->
+  <section id="features" class="features">
+    <div>
+      <h3>Location Intelligence</h3>
+      <p>Demographics, traffic, and competitive analysis in one platform.</p>
+    </div>
+    <div>
+      <h3>Scenario Modeling</h3>
+      <p>Compare sites and forecast outcomes before capital is deployed.</p>
+    </div>
+    <div>
+      <h3>Enterprise Focused</h3>
+      <p>Built for multi-location, multi-stakeholder decision making.</p>
+    </div>
+  </section>
+
+  <!-- New Platform Section -->
   <section id="platform" class="platform">
-    <div class="section-container">
-      <div class="text">
+    <div class="platform-content">
+      <div class="platform-text">
         <h2>The Urbivista Platform</h2>
-        <p>
-          Urbivista centralizes location intelligence, scenario modeling,
-          and reporting into a single enterprise-grade system.
-        </p>
+        <p>Centralizes location intelligence, scenario modeling, and reporting into one enterprise-grade system.</p>
         <ul>
           <li>Data-backed site scoring</li>
           <li>Custom trade area analysis</li>
@@ -72,80 +73,55 @@
           <li>Defensible decision documentation</li>
         </ul>
       </div>
-      <div class="image">
-        <img src="images/platform-dashboard.png" alt="Urbivista site selection dashboard">
+      <div class="platform-image">
+        <img src="images/platform-dashboard.png" alt="Enterprise site selection dashboard">
       </div>
     </div>
   </section>
 
-  <!-- Solutions -->
+  <!-- New Solutions Section -->
   <section id="solutions" class="solutions">
-    <div class="section-container">
-      <h2>Enterprise Solutions</h2>
-
-      <div class="solution">
-        <img src="images/location-intelligence.png" alt="Location intelligence analysis">
-        <div>
-          <h3>Location Intelligence</h3>
-          <p>
-            Demographics, traffic, workforce, and competitive data unified
-            into one decision layer.
-          </p>
-        </div>
+    <h2>Enterprise Solutions</h2>
+    <div class="solution">
+      <img src="images/location-intelligence.png" alt="Location intelligence analysis">
+      <div>
+        <h3>Location Intelligence</h3>
+        <p>Unified demographics, traffic, workforce, and competitive data for informed decision-making.</p>
       </div>
-
-      <div class="solution">
-        <img src="images/scenario-modeling.png" alt="Scenario modeling">
-        <div>
-          <h3>Scenario Modeling</h3>
-          <p>
-            Compare sites, forecast performance, and understand risk
-            before capital is deployed.
-          </p>
-        </div>
+    </div>
+    <div class="solution">
+      <img src="images/scenario-modeling.png" alt="Scenario modeling">
+      <div>
+        <h3>Scenario Modeling</h3>
+        <p>Compare sites, forecast performance, and understand risk before deploying capital.</p>
       </div>
-
-      <div class="solution">
-        <img src="images/enterprise-tools.png" alt="Enterprise expansion tools">
-        <div>
-          <h3>Enterprise Expansion</h3>
-          <p>
-            Built for multi-location growth, internal approvals,
-            and executive accountability.
-          </p>
-        </div>
+    </div>
+    <div class="solution">
+      <img src="images/enterprise-tools.png" alt="Enterprise expansion tools">
+      <div>
+        <h3>Enterprise Expansion</h3>
+        <p>Designed for multi-location growth, internal approvals, and executive accountability.</p>
       </div>
-
     </div>
   </section>
 
-  <!-- CTA -->
+  <!-- CTA Section -->
   <section class="cta">
-    <div class="cta-content">
-      <h2>Make confident expansion decisions</h2>
-      <p>
-        See how Urbivista supports enterprise site selection with
-        defensible, data-driven insight.
-      </p>
-      <a href="#contact" class="primary">Request a Demo</a>
-    </div>
+    <h2>Make confident expansion decisions</h2>
+    <p>See how Urbivista supports enterprise site selection with defensible, data-driven insight.</p>
+    <a href="#contact" class="primary">Request a Demo</a>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Section -->
   <section id="contact" class="contact">
     <div class="contact-container">
       <h2>Contact Urbivista</h2>
-      <p>
-        Reach out for platform demos, investor briefings,
-        or partnership inquiries.
-      </p>
-
+      <p>Reach out for platform demos, investor briefings, or partnership inquiries.</p>
       <ul class="contact-info">
         <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
         <li>Phone: <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
         <li>Address: 9191 Broadway, Merrillville, IN 46410</li>
       </ul>
-
       <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
@@ -155,11 +131,8 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <p>© 2025 Urbivista. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
-
