--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <title>Urbivista | Enterprise Site Selection SaaS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection and location intelligence. Make defensible, data-driven expansion decisions with confidence." />
+  <meta name="description" content="Urbivista helps enterprises evaluate locations with clarity, confidence, and defensible analytics." />
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="Urbivista | Enterprise Site Selection SaaS" />
   <meta property="og:description" content="Smarter site selection through data-driven analytics." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://urbivista.io" />
+  <meta property="og:url" content="https://www.urbivista.io" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Urbivista | Enterprise Site Selection SaaS" />
   <meta name="twitter:description" content="Enterprise-grade site selection and location intelligence." />
@@ -26,9 +26,6 @@
         <a href="#features">Platform</a>
         <a href="#solutions">Solutions</a>
         <a href="blog.html">Blog</a>
-        <!-- Future tabs -->
-        <!-- <a href="#about">About Us</a> -->
-        <!-- <a href="#projects">Recent Projects</a> -->
         <a href="#contact" class="nav-cta">Contact</a>
       </nav>
     </div>
@@ -60,7 +57,7 @@
     </div>
   </section>
 
-  <!-- New Platform Section -->
+  <!-- Platform Section -->
   <section id="platform" class="platform">
     <div class="platform-content">
       <div class="platform-text">
@@ -79,7 +76,7 @@
     </div>
   </section>
 
-  <!-- New Solutions Section -->
+  <!-- Solutions Section -->
   <section id="solutions" class="solutions">
     <h2>Enterprise Solutions</h2>
     <div class="solution">
@@ -131,8 +128,10 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <p>© 2025 Urbivista. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
