--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
   <!-- Features Section with Images -->
   <section id="features" class="features">
     <div>
-      <img src="images/location-intelligence.png" alt="Location intelligence analysis" style="width:100%; max-width:250px;">
+      <img src="/images/location-intelligence.png" alt="Location intelligence analysis" style="width:100%; max-width:250px;">
       <h3>Location Intelligence</h3>
       <p>Demographics, traffic, and competitive analysis in one platform.</p>
     </div>
     <div>
-      <img src="images/scenario-modeling.png" alt="Scenario modeling" style="width:100%; max-width:250px;">
+      <img src="/images/scenario-modeling.png" alt="Scenario modeling" style="width:100%; max-width:250px;">
       <h3>Scenario Modeling</h3>
       <p>Compare sites and forecast outcomes before capital is deployed.</p>
     </div>
     <div>
-      <img src="images/enterprise-tools.png" alt="Enterprise expansion tools" style="width:100%; max-width:250px;">
+      <img src="/images/enterprise-tools.png" alt="Enterprise expansion tools" style="width:100%; max-width:250px;">
       <h3>Enterprise Focused</h3>
       <p>Built for multi-location, multi-stakeholder decision making.</p>
     </div>
@@ -74,7 +74,7 @@
         </ul>
       </div>
       <div class="platform-image">
-        <img src="images/platform-dashboard.png" alt="Enterprise site selection dashboard" style="width:100%; max-width:600px;">
+        <img src="/images/platform-dashboard.png" alt="Enterprise site selection dashboard" style="width:100%; max-width:600px;">
       </div>
     </div>
   </section>
@@ -83,21 +83,21 @@
   <section id="solutions" class="solutions">
     <h2>Enterprise Solutions</h2>
     <div class="solution">
-      <img src="images/location-intelligence.png" alt="Location intelligence analysis" style="width:100%; max-width:250px;">
+      <img src="/images/location-intelligence.png" alt="Location intelligence analysis" style="width:100%; max-width:250px;">
       <div>
         <h3>Location Intelligence</h3>
         <p>Unified demographics, traffic, workforce, and competitive data for informed decision-making.</p>
       </div>
     </div>
     <div class="solution">
-      <img src="images/scenario-modeling.png" alt="Scenario modeling" style="width:100%; max-width:250px;">
+      <img src="/images/scenario-modeling.png" alt="Scenario modeling" style="width:100%; max-width:250px;">
       <div>
         <h3>Scenario Modeling</h3>
         <p>Compare sites, forecast performance, and understand risk before deploying capital.</p>
       </div>
     </div>
     <div class="solution">
-      <img src="images/enterprise-tools.png" alt="Enterprise expansion tools" style="width:100%; max-width:250px;">
+      <img src="/images/enterprise-tools.png" alt="Enterprise expansion tools" style="width:100%; max-width:250px;">
       <div>
         <h3>Enterprise Expansion</h3>
         <p>Designed for multi-location growth, internal approvals, and executive accountability.</p>
