--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
     </div>
   </main>
 
-  <!-- Features Section with Images -->
+  <!-- Features Section -->
   <section id="features" class="features">
     <div>
-      <img src="/images/location-intelligence.png" alt="Location intelligence analysis">
       <h3>Location Intelligence</h3>
       <p>Demographics, traffic, and competitive analysis in one platform.</p>
+      <img src="/images/location-intelligence.png" alt="Location intelligence" class="soft-edge">
     </div>
     <div>
-      <img src="/images/scenario-modeling.png" alt="Scenario modeling">
       <h3>Scenario Modeling</h3>
       <p>Compare sites and forecast outcomes before capital is deployed.</p>
+      <img src="/images/scenario-modeling.png" alt="Scenario modeling" class="soft-edge">
     </div>
     <div>
-      <img src="/images/enterprise-tools.png" alt="Enterprise expansion tools">
       <h3>Enterprise Focused</h3>
       <p>Built for multi-location, multi-stakeholder decision making.</p>
+      <img src="/images/enterprise-tools.png" alt="Enterprise expansion tools" class="soft-edge">
     </div>
   </section>
 
@@ -74,33 +74,7 @@
         </ul>
       </div>
       <div class="platform-image">
-        <img src="/images/platform-dashboard.png" alt="Enterprise site selection dashboard">
-      </div>
-    </div>
-  </section>
-
-  <!-- Solutions Section -->
-  <section id="solutions" class="solutions">
-    <h2>Enterprise Solutions</h2>
-    <div class="solution">
-      <img src="/images/location-intelligence.png" alt="Location intelligence analysis">
-      <div>
-        <h3>Location Intelligence</h3>
-        <p>Unified demographics, traffic, workforce, and competitive data for informed decision-making.</p>
-      </div>
-    </div>
-    <div class="solution">
-      <img src="/images/scenario-modeling.png" alt="Scenario modeling">
-      <div>
-        <h3>Scenario Modeling</h3>
-        <p>Compare sites, forecast performance, and understand risk before deploying capital.</p>
-      </div>
-    </div>
-    <div class="solution">
-      <img src="/images/enterprise-tools.png" alt="Enterprise expansion tools">
-      <div>
-        <h3>Enterprise Expansion</h3>
-        <p>Designed for multi-location growth, internal approvals, and executive accountability.</p>
+        <img src="/images/platform-dashboard.png" alt="Enterprise site selection dashboard" class="soft-edge">
       </div>
     </div>
   </section>
