--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 </head>
 <body>
 
+  <a id="top"></a>
+
   <!-- Navigation -->
   <header class="nav">
     <div class="nav-container">
-      <div class="logo">Urbivista</div>
+      <div class="logo">
+        <a href="#top">
+          <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo">
+        </a>
+      </div>
       <nav>
         <a href="#features">Platform</a>
         <a href="#solutions">Solutions</a>
@@ -79,6 +85,7 @@
   <!-- Solutions Section -->
   <section id="solutions" class="solutions">
     <h2>Enterprise Solutions</h2>
+
     <div class="solution">
       <img src="location-intelligence.png" alt="Location intelligence analysis">
       <div>
@@ -86,6 +93,7 @@
         <p>Unified demographics, traffic, workforce, and competitive data for informed decision-making.</p>
       </div>
     </div>
+
     <div class="solution">
       <img src="scenario-modeling.png" alt="Scenario modeling">
       <div>
@@ -93,6 +101,7 @@
         <p>Compare sites, forecast performance, and understand risk before deploying capital.</p>
       </div>
     </div>
+
     <div class="solution">
       <img src="enterprise-tools.png" alt="Enterprise expansion tools">
       <div>
@@ -114,11 +123,13 @@
     <div class="contact-container">
       <h2>Contact Urbivista</h2>
       <p>Reach out for platform demos, investor briefings, or partnership inquiries.</p>
+
       <ul class="contact-info">
         <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
         <li>Phone: <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
         <li>Address: 9191 Broadway, Merrillville, IN 46410</li>
       </ul>
+
       <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
