--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Urbivista | Enterprise Location Intelligence & Site Selection</title>
+  <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection, location intelligence, and expansion strategy using defensible, data-driven analytics." />
 
