--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection, location intelligence, and expansion strategy using defensible, data-driven analytics." />
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml">
 
   <link rel="stylesheet" href="styles.css" />
 
