--- a/index.html
+++ b/index.html
@@ -2,176 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Urbivista | Enterprise Location Intelligence & Site Selection</title>
-  <meta name="robots" content="index, follow">
+  <title>Urbivista | Enterprise Site Selection Intelligence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection, location intelligence, and expansion strategy using defensible, data-driven analytics." />
-  <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+  <meta name="description" content="Urbivista provides enterprise-grade site selection intelligence to help organizations see more and decide better." />
 
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="Urbivista_Logo_FullColor.png" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Urbivista | Enterprise Location Intelligence & Site Selection" />
-  <meta property="og:description" content="Smarter site selection through defensible, data-driven insight." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.urbivista.io" />
-  <meta property="og:image" content="https://www.urbivista.io/Urbivista_Logo_FullColor.png" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Urbivista | Enterprise Location Intelligence & Site Selection" />
-  <meta name="twitter:description" content="Enterprise-grade site selection and expansion intelligence." />
-  <meta name="twitter:image" content="https://www.urbivista.io/Urbivista_Logo_FullColor.png" />
 </head>
-
 <body>
 
-<a id="top"></a>
-
-<!-- Navigation -->
-<header class="nav">
-  <div class="nav-container">
-    <div class="logo">
-      <a href="#top">
+  <!-- Navigation -->
+  <header class="nav">
+    <div class="nav-inner">
+      <div class="logo">
+        <!-- KEEP USING WHAT YOU HAVE (PNG or SVG) -->
         <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo">
-      </a>
+      </div>
+
+      <nav class="nav-links">
+        <a href="#">Platform</a>
+        <a href="#">Solutions</a>
+        <a href="#">Company</a>
+        <a href="#">Contact</a>
+      </nav>
     </div>
-    <nav>
-      <a href="#features">Platform</a>
-      <a href="#solutions">Solutions</a>
-      <a href="blog.html">Blog</a>
-      <a href="#contact" class="nav-cta">Contact</a>
-    </nav>
-  </div>
-</header>
+  </header>
 
-<!-- Hero -->
-<main class="hero">
-  <h1>Smarter site selection through data-driven insight</h1>
-  <p>
-    Urbivista empowers enterprises to evaluate locations with clarity, confidence,
-    and defensible analytics.
-  </p>
-  <div class="buttons">
-    <a href="#features" class="primary">Explore the Platform</a>
-    <a href="#contact" class="secondary">Request a Briefing</a>
-  </div>
-</main>
-
-<!-- Features -->
-<section id="features" class="features">
-  <div>
-    <h3>Location Intelligence</h3>
-    <p>Demographics, traffic, workforce, and competitive data unified in one platform.</p>
-  </div>
-  <div>
-    <h3>Scenario Modeling</h3>
-    <p>Compare sites and forecast outcomes before capital is deployed.</p>
-  </div>
-  <div>
-    <h3>Enterprise Focused</h3>
-    <p>Built for multi-location organizations and executive decision-making.</p>
-  </div>
-</section>
-
-<!-- Platform -->
-<section id="platform" class="platform">
-  <div class="platform-content">
-    <div class="platform-text">
-      <h2>The Urbivista Platform</h2>
-      <p>
-        Urbivista centralizes location intelligence, scenario modeling, and reporting
-        into one enterprise-grade system.
-      </p>
-      <ul>
-        <li>Data-backed site scoring</li>
-        <li>Custom trade area analysis</li>
-        <li>Executive-ready dashboards</li>
-        <li>Defensible decision documentation</li>
-      </ul>
-    </div>
-    <div class="platform-image">
-      <img src="platform-dashboard.png" alt="Enterprise site selection dashboard">
-    </div>
-  </div>
-</section>
-
-<!-- Solutions -->
-<section id="solutions" class="solutions">
-  <h2>Enterprise Solutions</h2>
-
-  <div class="solution">
-    <img src="location-intelligence.png" alt="Location intelligence analysis">
-    <div>
-      <h3>Location Intelligence</h3>
-      <p>
-        Unified demographics, traffic, workforce, and competitive data to support
-        confident expansion decisions.
-      </p>
-    </div>
-  </div>
-
-  <div class="solution">
-    <img src="scenario-modeling.png" alt="Scenario modeling">
-    <div>
-      <h3>Scenario Modeling</h3>
-      <p>
-        Model multiple site scenarios, forecast performance, and understand risk
-        before deploying capital.
-      </p>
-    </div>
-  </div>
-
-  <div class="solution">
-    <img src="enterprise-tools.png" alt="Enterprise expansion tools">
-    <div>
-      <h3>Enterprise Expansion</h3>
-      <p>
-        Purpose-built for multi-location growth, internal approvals, and executive
-        accountability.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- CTA -->
-<section class="cta">
-  <h2>Make confident expansion decisions</h2>
-  <p>
-    See how Urbivista supports enterprise site selection with defensible,
-    data-driven insight.
-  </p>
-  <a href="#contact" class="primary">Request a Demo</a>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="contact">
-  <div class="contact-container">
-    <h2>Contact Urbivista</h2>
-    <p>Reach out for platform demos, investor briefings, or partnership inquiries.</p>
-
-    <ul class="contact-info">
-      <li>Email: <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
-      <li>Phone: <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
-      <li>Address: 9191 Broadway, Merrillville, IN 46410</li>
-    </ul>
-
-    <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="footer">
-  <p>© 2025 Urbivista. All rights reserved.</p>
-</footer>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Enterprise Location Intelligence</h1>
+    <p>See more. Decide better.</p>
+  </section>
 
 </body>
 </html>
